# cuestionektor

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.vue  injectionKeys.ts  main.ts  models.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  cuestionektorDB  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/questionnaires/: Informatica.json
src-tauri/src/: controllers.rs  json_db.rs  json_handler.rs  main.rs  model.rs  models.rs  pdf_parser.rs  test.rs
src-tauri/src/controllers/: question_controller.rs  questionnaire_controller.rs
src-tauri/src/controllers/question_controller/: create.rs  delete.rs  read.rs  update.rs
src-tauri/src/controllers/questionnaire_controller/: create.rs  delete.rs  read.rs  update.rs
src-tauri/src/controllers/registered_controller/: create.rs  delete.rs  read.rs  update.rs
src-tauri/src/models/: parsing_utils.rs  questionnaire.rs  registered.rs  view_models.rs
src-tauri/src/test/: json_db_test.rs  questionnaire_test.rs  registered_test.rs
src/assets/icons/: index.ts
src/components/: AppBar.vue  EditableQuestion.vue  NoQuestionnaires.vue  QuestionComponent.vue  Sidebar.vue  Toast.vue
src/models/: parsing-utils.ts  questionnaire.ts  registered.ts  view-models.ts
src/router/: index.ts  indexj.js
src/services/: context.service.ts  endpoints.service.ts  notifications.service.ts  question.service.ts  questionnaire.service.ts
src/views/: Create.vue  Home.vue  Manage.vue  Questionnaire.vue  UploadFile.vue
