[package]
name = "cuestionektor"
version = "0.6.9"
description = "Questionnaire app"
authors = ["Isac"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdf-extract = "0.7.4"
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
simple-logging = "2.0.2"
log = "0.4.20"
native_db = "0.5.3"
once_cell = "1.19.0"
native_model = "0.4.11"
rand = "0.8.5"
chrono = "0.4.33"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
